--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,13 @@ machine:
   # Set version of node to use
   node:
     version: 5.7.0
-  ruby:
-    version: rbx-2.2.6
+
+  post:
+  - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
+  - wget -qO- https://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
+  - sudo apt-get update -o Dir::Etc::sourcelist="/etc/apt/sources.list.d/rethinkdb.list" -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
+  - sudo apt-get install rethinkdb
+
 
 ## Set artifacts
 # general:
@@ -27,11 +32,20 @@ dependencies:
     - sudo npm install -g mocha
     - sudo gem install eventmachine
 
+
 ## Customize test commands
 test:
   override:
     # Run client tests
-    - ./test-runner -i js
-    - ./test-runner -i py2.7.11
-    - ./test-runner -i py3.5.1
-    - ./test-runner -i ruby-2.3.1
+    - ./test-runner -i js5:
+      parallel: true
+      pwd: test
+    - ./test-runner -i py2.7:
+      parallel: true
+      pwd: test
+    - ./test-runner -i py3.5:
+      parallel: true
+      pwd: test
+    - ./test-runner -i rb2.3:
+      parallel: true
+      pwd: test
