--- a/circle.yml
+++ b/circle.yml
@@ -28,8 +28,8 @@ dependencies:
     - sudo service mysql stop
 
     # Prepare for client tests
-    - pip install urllib3[secure]
-    - pip install tornado twisted pyopenssl gevent
+    - sudo pip install urllib3[secure]
+    - sudo pip install tornado twisted pyopenssl gevent
     - sudo npm install -g mocha
     - sudo gem install eventmachine
 
