--- a/circle.yml
+++ b/circle.yml
@@ -28,8 +28,12 @@ dependencies:
     - sudo service mysql stop
 
     # Prepare for client tests
+    - sudo apt-get install python-dev libffi-dev libssl-dev
     - sudo pip install urllib3[secure] --upgrade --ignore-installed
-    - sudo pip install tornado twisted pyopenssl gevent --upgrade --ignore-installed
+    - sudo pip install tornado --upgrade --ignore-installed
+    - sudo pip install twisted --upgrade --ignore-installed
+    - sudo pip install pyopenssl --upgrade --ignore-installed
+    - sudo pip install gevent --upgrade --ignore-installed
     - sudo npm install -g mocha
     - sudo gem install eventmachine
 
