--- a/test/rql_test/src/mutation/write_hook.yaml
+++ b/test/rql_test/src/mutation/write_hook.yaml
@@ -16,7 +16,7 @@ tests:
   - cd: tbl.set_write_hook(null)
     ot: partial({'deleted': 1 })
 
-  - js: tbl.setWriteHook(function(a, b, c) { return c.merge({'num':2})})
+  - js: tbl.setWriteHook(function(a, b, c) { return c.merge({'num':1})})
     py: tbl.set_write_hook(lambda a,b,c: c.merge({'num':2}))
     rb: tbl.set_write_hook(lambda { |a,b,c| c.merge({'num':2})})
     ot: partial({'created': 1 })
@@ -24,7 +24,7 @@ tests:
   - js: tbl.setWriteHook(function(a, b, c) { return c.merge({'num':2})})
     py: tbl.set_write_hook(lambda a,b,c: c.merge({'num':2}))
     rb: tbl.set_write_hook(lambda { |a,b,c| c.merge({'num':2})})
-    ot: partial({'created': 1 })
+    ot: partial({'replaced': 1 })
 
   - cd: tbl.update({"blah":2})
     ot: partial({'replaced':1, 'errors':0})
